[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/item_icons/misc/map.png" type="Texture" id=1]
[ext_resource path="res://assets/item_icons/ring/pain.png" type="Texture" id=2]
[ext_resource path="res://assets/item_icons/weapon/electric.png" type="Texture" id=3]
[ext_resource path="res://assets/item_icons/spell/earth_spell.png" type="Texture" id=4]
[ext_resource path="res://necrosans/font_medium.tres" type="DynamicFont" id=5]
[ext_resource path="res://assets/item_icons/shovel/courage.png" type="Texture" id=6]
[ext_resource path="res://Crypt_block.gd" type="Script" id=7]

[node name="Crypt_block" type="Control" groups=[
"font_medium",
]]
anchor_right = 0.66
anchor_bottom = 0.147
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="touchscreen" type="Button" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="death" type="Label" parent="." groups=[
"font_medium",
]]
anchor_right = 0.4
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 5 )
text = "win"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GUI_Build" type="HBoxContainer" parent="."]
anchor_left = 0.4
anchor_top = 0.6
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Build_1" type="TextureRect" parent="GUI_Build"]
margin_left = 22.0
margin_right = 72.0
margin_bottom = 78.0
texture = ExtResource( 6 )

[node name="Build_2" type="TextureRect" parent="GUI_Build"]
margin_left = 76.0
margin_right = 124.0
margin_bottom = 78.0
texture = ExtResource( 2 )

[node name="Build_3" type="TextureRect" parent="GUI_Build"]
margin_left = 128.0
margin_right = 166.0
margin_bottom = 78.0
texture = ExtResource( 3 )

[node name="Build_4" type="TextureRect" parent="GUI_Build"]
margin_left = 170.0
margin_right = 220.0
margin_bottom = 78.0
texture = ExtResource( 4 )

[node name="Build_5" type="TextureRect" parent="GUI_Build"]
margin_left = 224.0
margin_right = 274.0
margin_bottom = 78.0
texture = ExtResource( 1 )

[node name="runtime" type="Label" parent="." groups=[
"font_medium",
]]
anchor_left = 0.4
anchor_right = 1.0
anchor_bottom = 0.5
custom_fonts/font = ExtResource( 5 )
text = "00:00.00
(igt 00:00.00)"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Outline" type="Line2D" parent="."]
points = PoolVector2Array( 0, 0, 500, 0, 500, 200, 0, 200, 0, 0 )
width = 4.0
default_color = Color( 0.192157, 0.968627, 0.258824, 1 )

[node name="Inline_vertical" type="Line2D" parent="."]
points = PoolVector2Array( 200, 0, 200, 200 )
width = 4.0

[node name="Inline_horizontal" type="Line2D" parent="."]
points = PoolVector2Array( 200, 100, 500, 100 )
width = 4.0

[connection signal="pressed" from="touchscreen" to="." method="_on_touchscreen_pressed"]
